--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,12 @@
   </script>
 
   <!-- End Safary Tag Manager -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body style="overflow: auto !important; margin-right: 0 !important;">
